src/objects/Apttus_Proposal_Proposal__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Batch_Size__c</fullName>
        <label>Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elastic_Sync_API__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Elastic Sync API</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enable_Classic_Pricing_Button__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Enterprise Classic Pricing Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Classic_Pricing_Button_forPartner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Indirect Classic Pricing Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Surround_Classic_Pricing_Button__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Surround Classic Pricing Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Surround_Turbo_Pricing_Button__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Surround Turbo Pricing Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Turbo_Pricing_Button__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created to Enable or disable Turbo pricing button functionality</description>
        <inlineHelpText>Enable or disable Turbo pricing button functionality</inlineHelpText>
        <label>Enable Enterprise Turbo Pricing Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Turbo_Pricing_Button_for_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Indirect Turbo Pricing Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Extensibility_Sync_API__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Extensibility Sync API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Turbo Pricing</label>
</CustomObject>